--- a/cart.html
+++ b/cart.html
@@ -124,56 +124,43 @@
     <section class="book_section layout_padding">
       <div class="container">
         <div class="heading_container">
-          <h2>Book A Table</h2>
+          <h2>Items from your Cart</h2>
         </div>
-        <div class="row">
-          <div class="col-md-6">
-            <div class="form_container">
-              <form action="">
-                <div>
-                  <input
-                    type="text"
-                    class="form-control"
-                    placeholder="Your Name"
-                  />
-                </div>
-                <div>
-                  <input
-                    type="text"
-                    class="form-control"
-                    placeholder="Phone Number"
-                  />
-                </div>
-                <div>
-                  <input
-                    type="email"
-                    class="form-control"
-                    placeholder="Your Email"
-                  />
-                </div>
-                <div>
-                  <select class="form-control nice-select wide">
-                    <option value="" disabled selected>
-                      How many persons?
-                    </option>
-                    <option value="">2</option>
-                    <option value="">3</option>
-                    <option value="">4</option>
-                    <option value="">5</option>
-                  </select>
-                </div>
-                <div>
-                  <input type="date" class="form-control" />
-                </div>
-                <div class="btn_box">
-                  <button>Book Now</button>
-                </div>
-              </form>
+        <div class="card mb-3" style="padding: 10px">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img
+                src="./images/burger01.webp"
+                class="img-fluid rounded-start"
+                alt="..."
+              />
             </div>
-          </div>
-          <div class="col-md-6">
-            <div class="map_container">
-              <div id="googleMap"></div>
+            <div class="col-md-8" style="">
+              <div class="card-body">
+                <h5
+                  class="card-title"
+                  style="
+                    background: #ffbe33;
+                    color: #fff;
+                    width: 100px;
+                    padding: 5px;
+                    text-align: center;
+                    border-radius: 5px;
+                  "
+                >
+                  Details
+                </h5>
+                <p class="card-text">Mighty Zinger Sandwich</p>
+              </div>
+            </div>
+            <div style="padding: 10px">
+              <button class="btn">
+                <i class="fa-solid fa-trash-can" style="font-size: 30px"></i>
+              </button>
+              <span style="padding: 10px; font-size: 20px; font-weight: bold"
+                >1</span
+              >
+              <button class="btn btn-danger">+</button>
             </div>
           </div>
         </div>
@@ -206,7 +193,7 @@
           </div>
           <div class="col-md-4 footer-col">
             <div class="footer_detail">
-              <a href="" class="footer-logo"> INFINITY </a>
+              <a href="" class="footer-logo"> Feane </a>
               <p>
                 Necessary, making this the first true generator on the Internet.
                 It uses a dictionary of over 200 Latin words, combined with
@@ -248,7 +235,7 @@
     </footer>
     <!-- footer section -->
 
-    <!-- jQery -->
+    <!-- jQuery -->
     <script src="js/jquery-3.4.1.min.js"></script>
     <!-- popper js -->
     <script
