--- a/logIN.html
+++ b/logIN.html
@@ -101,7 +101,7 @@
               </ul>
               <div class="user_option">
                 <a href="logIN.html" class="user_link">
-                  <i class="fa fa-user" aria-hidden="true"></i>
+                  <i class="fa fa-user"></i>
                 </a>
                 <a class="cart_link" href="cart.html">
                   <i class="fa-solid fa-cart-shopping"></i>
@@ -123,60 +123,46 @@
     <!-- book section -->
     <section class="book_section layout_padding">
       <div class="container">
-        <div class="heading_container">
-          <h2>Book A Table</h2>
-        </div>
-        <div class="row">
-          <div class="col-md-6">
-            <div class="form_container">
-              <form action="">
-                <div>
-                  <input
-                    type="text"
-                    class="form-control"
-                    placeholder="Your Name"
-                  />
-                </div>
-                <div>
-                  <input
-                    type="text"
-                    class="form-control"
-                    placeholder="Phone Number"
-                  />
-                </div>
-                <div>
-                  <input
-                    type="email"
-                    class="form-control"
-                    placeholder="Your Email"
-                  />
-                </div>
-                <div>
-                  <select class="form-control nice-select wide">
-                    <option value="" disabled selected>
-                      How many persons?
-                    </option>
-                    <option value="">2</option>
-                    <option value="">3</option>
-                    <option value="">4</option>
-                    <option value="">5</option>
-                  </select>
-                </div>
-                <div>
-                  <input type="date" class="form-control" />
-                </div>
-                <div class="btn_box">
-                  <button>Book Now</button>
-                </div>
-              </form>
+        <form style="width: 500px; margin: 1px auto">
+          <div class="heading_container">
+            <h2>log In</h2>
+          </div>
+          <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label"
+              >Email address</label
+            >
+            <input
+              type="email"
+              class="form-control"
+              id="exampleInputEmail1"
+              aria-describedby="emailHelp"
+            />
+            <div id="emailHelp" class="form-text">
+              We'll never share your email with anyone else.
             </div>
           </div>
-          <div class="col-md-6">
-            <div class="map_container">
-              <div id="googleMap"></div>
-            </div>
+          <div class="mb-3">
+            <label for="exampleInputPassword1" class="form-label"
+              >Your phone number</label
+            >
+            <input
+              type="password"
+              class="form-control"
+              id="exampleInputPassword1"
+            />
           </div>
-        </div>
+          <div class="mb-3 form-check">
+            <input
+              type="checkbox"
+              class="form-check-input"
+              id="exampleCheck1"
+            />
+            <label class="form-check-label" for="exampleCheck1"
+              >Check me out</label
+            >
+          </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
       </div>
     </section>
     <!-- end book section -->
