--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
       crossorigin="anonymous"
     ></script>
     <!-- bootstrap js -->
-    <!-- <script src="js/bootstrap.js"></script> -->
+    <script src="js/bootstrap.js"></script>
     <!-- owl slider -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <!-- isotope js -->
