--- a/index.html
+++ b/index.html
@@ -53,10 +53,11 @@
 
   <body>
     <div class="hero_area">
-      <div class="bg-box">
+      <!-- <div class="bg-box">
         <img src="images/hero-bg.jpg" alt="" />
-      </div>
+      </div> -->
       <!-- header section strats -->
+      <!-- <div class="overlay"> -->
       <header class="header_section">
         <div class="container">
           <nav class="navbar navbar-expand-lg custom_nav-container">
@@ -113,6 +114,7 @@
             </div>
           </nav>
         </div>
+        <!-- </div> -->
       </header>
       <!-- end header section -->
       <!-- slider section -->
